[tool.poetry]
name = "mi10-mqtt-module"
version = "2022.2.0+3"
description = ""
authors = ["Petr Cezner <petr.cezner@factorio.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^3.12.0"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
