[tool.poetry]
name = "mi10-mqtt-module"
version = "2022.2.1+0"
description = ""
authors = ["Petr Cezner <petr.cezner@factorio.cz>"]

[tool.poetry.dependencies]
python = "^3.8"
pymongo = "^4.0.2"
paho-mqtt = "^1.6.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
